objects/Past_Case__c.object
<CustomObject>
    <fields>
        <fullName>Current_Case__c</fullName>
        <label>Current Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Past Cases</relationshipLabel>
        <relationshipName>Past_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Past_Case_Account__c</fullName>
        <formula>Past_Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Case Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Case_Contact__c</fullName>
        <formula>Past_Case__r.Contact.FirstName &amp; &apos; &apos; &amp;  Past_Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Case Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Case_Status__c</fullName>
        <formula>TEXT( Past_Case__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Case_Subject__c</fullName>
        <formula>Past_Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Past Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Current Cases</relationshipLabel>
        <relationshipName>Past_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Past Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Past Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Past Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>